--- a/.github/workflows/update-currently-working-on.yml
+++ b/.github/workflows/update-currently-working-on.yml
@@ -1,46 +1,38 @@
-name: Update "Currently Working On" Section
+name: Update README with Last Pushed Repo
 
 on:
   push:
     branches:
-      - main  # Change if your default branch isn't `main`
-  schedule:
-    - cron: '*/10 * * * *'
+      - main  # Run this workflow on pushes to the main branch.
 
 jobs:
-  update-currently-working-on:
+  update-readme:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the Repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Get Latest Repository
+      # Step 2: Get Last Pushed Repository
+      - name: Get Last Pushed Repository
+        id: last-repo
         run: |
-          latest_repo=$(gh repo list Soulittude --limit 1 --sort pushed | awk '{print $1}')
-          echo "LATEST_REPO=$latest_repo" >> $GITHUB_ENV
+          LAST_REPO=$(curl -s -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+            https://api.github.com/users/${{ github.actor }}/events \
+            | jq -r 'map(select(.type == "PushEvent")) | .[0].repo.name')
+          echo "LAST_REPO=${LAST_REPO}" >> $GITHUB_ENV
 
-      - name: Update README Section
+      # Step 3: Update README.md
+      - name: Update README
         run: |
-          # Define the start and end of the section
-          START_MARKER="<!-- START: Currently Working On -->"
-          END_MARKER="<!-- END: Currently Working On -->"
-          
-          # Extract the latest repository
-          REPO_LINK="[${LATEST_REPO}](https://github.com/${LATEST_REPO})"
-          
-          # Build the new section
-          NEW_SECTION="${START_MARKER}\n## Currently Working On: ${REPO_LINK}\n${END_MARKER}"
-          
-          # Replace the section between markers
-          sed -i "/${START_MARKER}/,/${END_MARKER}/c\\${NEW_SECTION}" README.md
+          sed -i "s|## Currently Working On: \[.*\](.*)|## Currently Working On: [${{ env.LAST_REPO }}](https://github.com/${{ github.actor }}/${{ env.LAST_REPO }})|" README.md
 
+      # Step 4: Commit and Push Changes
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add README.md
           git commit -m "Update Currently Working On section"
           git push
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
