--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main # Replace with your default branch
   schedule:
-    - cron: '*/10 * * * *' # Runs daily (optional, adjust as needed)
+    - cron: '*/10 * * * *'
 
 jobs:
   update-readme:
